--- a/index.html
+++ b/index.html
@@ -259,7 +259,33 @@
                 <button class="btn-order" onclick="ordenar('Mezcal Hechizo Reposado 750ml')">Ordenar Ahora</button>
             </div>
         </div>
+ <!-----------------------CREMA DE TEQUILA------------------------------------>
+        <div class="category">
+            <h2 class="category-title">UNA DELICIA AL PALADAR</h2>
+            
+            <div class="product-card">
+                <div class="product-header">
+                    <div class="product-name">CREMA DE TEQUILA QUITA PENAS</div>
+                    <div class="product-price">$250</div>
+                </div>
 
+                <!-------------------imagen btl--------------->
+                <div style="text-align: center;">
+                    <img src="img\CT_QUITAPENAS_edit.png">
+                </div>
+                <!-------------------------------------------->
+
+                <div class="product-details">
+                    <span class="ml-indicator">1 L</span>
+                </div>
+                <div class="product-details">
+                    Notas de agave cocido, con suaves esencias dulces.
+                </div>
+                <span class="product-badge">Bebida ligera</span>
+                <button class="btn-order" onclick="ordenar('Mezcal Hechizo Reposado 750ml')">Ordenar Ahora</button>
+            </div>
+        </div>
+    <!-----------------------termina CREMA DE TEQUILA------------------------------------>
         <div class="category">
             <h2 class="category-title">🍷 Brandies Premium</h2>
             
@@ -354,4 +380,5 @@
     </script>
 </body>
 </html>
+
 
