Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                 <!-------------------imagen btl--------------->
                 <div style="text-align: center;">
-                    <img src="img\HECHIZO_edit.png">
+                    <img src="img\HECHIZO_AGOTADO.png">
                 </div>
                 <!-------------------------------------------->
 
@@ -256,7 +256,6 @@
                     Artesanal, ahumado y con carácter único mexicano
                 </div>
                 <span class="product-badge">Artesanal</span>
-                <button class="btn-order" onclick="ordenar('Mezcal Hechizo Reposado 750ml')">Ordenar Ahora</button>
             </div>
         </div>
  <!-----------------------CREMA DE TEQUILA------------------------------------>
@@ -410,6 +409,7 @@
     </script>
 </body>
 </html>
+
 
 
 
