Restore original index.html content
Restored the original content of index.html after it was modified. This includes the structure and all product listings for the liquor menu.

--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
                 </div>
 
                 <!-------------------imagen btl--------------->
-               
+                <div style="text-align: center;">
+                    <img src="img\BRANDYS_edit.png">
+                </div>
                 <!-------------------------------------------->
                 
                 <div class="product-details">
@@ -407,6 +409,7 @@
     </script>
 </body>
 </html>
+
 
 
 
