--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <!-------------------------------------------->
                 
                 <div class="product-details">
-                    <span class="ml-indicator">TEQUILA CRISTALINO + REPOSADO</span>
+                    <span class="ml-indicator">TEQUILA BLANCO + REPOSADO</span>
                 </div>
                
 
@@ -409,6 +409,7 @@
     </script>
 </body>
 </html>
+
 
 
 
